# MyGLEcs

./: Buffers.cpp  Buffers.h  CMakeLists.txt  Camera.hpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Components.cpp  Components.h  EntityFactory.cpp  EntityFactory.h  EntityManager.h  Input.cpp  Input.h  MovementSystem.cpp  MovementSystem.h  MyWindow.cpp  MyWindow.h  Primitives.h  ReferanceCubes.hpp  Shader.h  Texture.h  World.cpp  World.h  fwd.h  main.cpp
Shaders/: cubeFragment.glsl  cubeVertex.glsl
